--- a/website/src/styles/breakpoints/680.css
+++ b/website/src/styles/breakpoints/680.css
@@ -22,7 +22,7 @@
   }
 
   .hero {
-    padding: 70px 0 54px;
+    padding: 40px 0 54px;
   }
 
   .hero h1 {
